tests/ast_interpreter/err_print_arg_count.expected
<string>:2:5: error: print expects 1 argument
    print(1, 2);
    ^^^^^
